plugins {
    id "java"
    id "idea"
}


subprojects {
    apply plugin: "java"
    apply plugin: "idea"

    plugins.withType(JavaPlugin).configureEach {
        java {
            modularity.inferModulePath = true
        }
    }

    group = "pickjob"
    version = "0.0.1"
    ext.os = org.gradle.internal.os.OperatingSystem.current().isWindows() ? "win":"linux"

    dependencies {
        // logging
        implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
        implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
        implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
        // apache commons
        implementation "org.apache.commons:commons-lang3:3.8"
        // netty
        implementation "io.netty:netty-common:${nettyVersion}"
        implementation "io.netty:netty-resolver:${nettyVersion}"
        implementation "io.netty:netty-buffer:${nettyVersion}"
        implementation "io.netty:netty-transport:${nettyVersion}"
        implementation "io.netty:netty-transport-native-unix-common:${nettyVersion}"
        implementation "io.netty:netty-transport-native-epoll:${nettyVersion}"
        implementation "io.netty:netty-handler:${nettyVersion}"
        implementation "io.netty:netty-codec:${nettyVersion}"
        implementation "io.netty:netty-codec-http:${nettyVersion}"
        implementation "io.netty:netty-codec-http2:${nettyVersion}"
        implementation "io.netty:netty-codec-redis:${nettyVersion}"
        implementation "io.netty:netty-codec-mqtt:${nettyVersion}"
        implementation "io.netty:netty-codec-stomp:${nettyVersion}"
        implementation "io.netty:netty-resolver-dns:${nettyVersion}"

    }

    compileJava {
        sourceCompatibility = 15
        targetCompatibility = 15
        options.encoding = "UTF-8"
        options.compilerArgs.add("--enable-preview")
    }

    compileTestJava {
        sourceCompatibility = 15
        targetCompatibility = 15
        options.encoding = "UTF-8"
        options.compilerArgs.add("--enable-preview")
    }

    repositories {
        maven {
            url "https://maven.aliyun.com/repository/public"
        }
        jcenter()
        mavenCentral()
    }

    idea {
        module {
            jdkName = "15"
            downloadJavadoc = true
            downloadSources = true
        }
    }
}